--- a/tutorial/tutorial.css
+++ b/tutorial/tutorial.css
@@ -11,11 +11,16 @@ a:link, a:visited {
 
 header {
     position: fixed;
+    z-index: 1;
     top: 0;
     width: 100%;
     background-color: rgb(40, 40, 40);
     font-size: xx-large;
     color: rgb(0, 191, 255);
+}
+
+#allContent {
+    margin: 60px;
 }
 
 @media screen and (min-width: 801px) {
@@ -36,22 +41,4 @@ header {
     #headerTitle {
         text-align: center;
     }
-}
-
-.contentBorder {
-    margin: 2% 10% 2% 10%;
-    padding: 1px;
-    border-radius: 25px;
-    background-color: rgb(230, 230, 230);
-}
-
-.content {
-    margin: 14px;
-    border-radius: 25px;
-    background-color: rgb(255, 255, 255);
-    text-align: center;
-}
-
-#allContent {
-    margin: 5%;
 }
