--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
     width: 100%;
     margin: 0px;
     padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 a:link{
     text-decoration: none;
