--- a/tutorial/tutorial.css
+++ b/tutorial/tutorial.css
@@ -1,44 +1,38 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+h1 {
+    font-size: x-large;
 }
 
-a:link, a:visited {
-    color: inherit;
-    text-decoration: none;
+h2 {
+    font-size: large;
 }
 
-header {
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    width: 100%;
-    background-color: rgb(40, 40, 40);
-    font-size: xx-large;
-    color: rgb(0, 191, 255);
+ul, ol {
+    margin-inline-start: 1em;
+}
+
+.line {
+    margin: 1%;
+    border-bottom-style: solid;
+    border-bottom-color: #00BFFF;
 }
 
 #allContent {
-    margin: 60px;
+    margin: 60px 10% 0 10%;
+    padding: 20px;
+    background-color: rgb(240, 240, 240);
+    border-radius: 25px;
+    line-height: 2;
 }
 
-@media screen and (min-width: 801px) {
-    #headerWebname {
-        position: absolute;
-        margin-left: 20%;
-        margin-top: 3px;
-    }
-    #headerTitle {
-        text-align: center;
-    }
+#passage a:link, #passage a:visited {
+    color: #6495ED;
 }
 
-@media screen and (max-width: 800px) {
-    #headerWebname {
-        display: none;
-    }
-    #headerTitle {
-        text-align: center;
-    }
+.lineThrough {
+    text-decoration: line-through;
+}
+
+.centralImg {
+    margin: 1%;
+    text-align: center;
 }
