--- a/aboutWebsite/developmentLog/developmentLog.css
+++ b/aboutWebsite/developmentLog/developmentLog.css
@@ -21,7 +21,7 @@ a:link, a:visited {
 
 header {
     display: flex;
-    flex: 0 1 0;
+    flex: 0 1 auto;
     background-color: rgb(40, 40, 40);
     color: rgb(0, 191, 255);
     font-size: xx-large;
