--- a/homepageM.css
+++ b/homepageM.css
@@ -103,3 +103,12 @@ header {
 #aboutWebsite {
     background-image: linear-gradient(to left, #ff9569, #e92758);
 }
+
+#commentArea {
+    margin-inline-start: -1.5rem;
+    list-style: none;
+}
+
+#commentArea a, #commentArea img {
+    vertical-align: middle;
+}
