--- a/homepage/homepageM.css
+++ b/homepage/homepageM.css
@@ -18,8 +18,12 @@ a:hover {
 }
 
 ul, ol {
-    margin-inline-start: 1em;
+    list-style-type: none;
     line-height: 2em;
+}
+
+ul img, ul a{
+    vertical-align: middle;
 }
 
 #wholePage {
@@ -81,8 +85,8 @@ header {
     flex: 2 0 0;
 }
 
-.sortCatalog ul{
-    margin-top: 5%;
+.sortCatalog li{
+    margin-top: 4%;
 }
 
 #ACGNInfo {
@@ -102,13 +106,4 @@ header {
 
 #aboutWebsite {
     background-image: linear-gradient(to left, #ff9569, #e92758);
-}
-
-#commentArea {
-    margin-inline-start: -1.5rem;
-    list-style: none;
-}
-
-#commentArea a, #commentArea img {
-    vertical-align: middle;
 }
