--- a/tutorial/tutorial.css
+++ b/tutorial/tutorial.css
@@ -10,13 +10,19 @@ ul, ol {
     margin-inline-start: 1em;
 }
 
-.line {
+.line, .dividingLine {
     margin: 1%;
     border-bottom-style: solid;
     border-bottom-color: #00BFFF;
 }
 
-#allContent {
+.halfDividingLine {
+    margin: 1% 50% 1% 1%;
+    border-bottom-style: solid;
+    border-bottom-color: #ffdead;
+}
+
+#allContent, #allContents {
     margin: 60px 10% 0 10%;
     padding: 20px;
     background-color: rgb(240, 240, 240);
