--- a/tutorial/SSR/SSR.css
+++ b/tutorial/SSR/SSR.css
@@ -1,3 +1,18 @@
-.iosImg {
-    margin-left: 10%;
+@media screen and (max-width: 800px) {
+    #windowsClient img {
+        width: 100%;
+    }
+    #iosClient img {
+        width: 100%;
+    }
+}
+
+table {
+    width: 100%;
+    text-align: center;
+}
+
+td img {
+    max-height: 600px;
+    max-width: 300px;
 }
