--- a/tutorial/tutorial.css
+++ b/tutorial/tutorial.css
@@ -1,11 +1,3 @@
-h1 {
-    font-size: x-large;
-}
-
-h2 {
-    font-size: large;
-}
-
 ul, ol {
     margin-inline-start: 1em;
 }
@@ -23,11 +15,35 @@ ul, ol {
 }
 
 #allContent, #allContents {
-    margin: 60px 10% 0 10%;
     padding: 20px;
     background-color: rgb(240, 240, 240);
     border-radius: 25px;
     line-height: 2;
+}
+
+@media screen and (min-width: 801px) {
+    #allContent, #allContents {
+        margin: 60px 10% 0 10%;
+    }
+    h1 {
+        font-size: 1.5rem;
+    }
+    h2 {
+        font-size: 1.3rem;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    #allContent, #allContents {
+        margin: 43px 5% 0 5%;
+        font-size: 0.85rem;
+    }
+    h1 {
+        font-size: 1.3rem;
+    }
+    h2 {
+        font-size: 1.1rem;
+    }
 }
 
 #passage a:link, #passage a:visited {
