开发日志页-2.1 vh改为100%以适配移动端

--- a/aboutWebsite/developmentLog/developmentLog.css
+++ b/aboutWebsite/developmentLog/developmentLog.css
@@ -13,10 +13,14 @@ ul {
     margin-inline-start: 1rem;
 }
 
+html, body {
+    height: 100%;
+}
+
 #wholePage {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
 }
 
 header {
