--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,13 +2,10 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SoraPage</title>
-    <!-- {% include 'bootstrap.html' %} -->
-    <link rel="stylesheet" href="../static/libs/bootstrap-4.5.0/bootstrap.min.css">
-    <script src="../static/libs/jquery-3.5.1.min.js"></script>
-    <script src="../static/libs/bootstrap-4.5.0/bootstrap.bundle.min.js"></script>
+    {% include 'libs.html' %}
     <style>
         html,
         body {
@@ -54,7 +51,7 @@
             height: 100%;
         }
 
-        
+
     </style>
     <script>
         $(document).ready(function () {
@@ -79,7 +76,7 @@
     </div>
 
     <div id="home">
-        
+        {% include 'header.html' %}
     </div>
 </body>
 
